# c-chat

./: .gitignore  CMakeLists.txt  README.md  debug_build.sh  rebuild.sh  run.sh
include/: bootstrap_node.h  gui.h  gui_config.h  messaging_gui.h  toolbar.h  utils.h
src/: bootstrap_node.c  main.c  messaging_gui.c  utils.c
src/bootstrap_node/: bootstrap_node.c  bootstrap_node.h
src/graphics/: gui.c  toolbar.c
src/server/: server.c  server.h
src/utils/: utils.c  utils.h
